docs/1.1.0/benchmark.md
# Benchmark Results

## Environment

- **CPU:** AMD Ryzen 9 9950X3D
- **Hash size:** 256MB

## Endgame Test Suite

### FFO #40–59

#### Multi-threaded

**Settings:** Precision Boost Overdrive: `Auto`, Core Performance Boost: `Auto`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0103 |      9,695,371 |   941,298,155 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.0307 |     18,391,849 |   599,083,029 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.0308 |     17,683,530 |   574,140,584 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.0615 |     47,088,617 |   765,668,569 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.0265 |     10,396,484 |   392,320,151 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    0.1644 |    200,789,786 | 1,221,349,063 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.0545 |     38,117,101 |   699,396,349 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.0279 |     14,709,447 |   527,220,323 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    0.0942 |     65,929,744 |   699,891,125 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    0.1910 |    171,550,753 |   898,171,482 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    0.3900 |    423,938,261 | 1,087,021,182 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    0.1315 |    117,851,900 |   896,212,167 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    0.1705 |    155,849,397 |   914,072,710 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |    0.8390 |  1,197,648,234 | 1,427,471,077 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |    1.3468 |  2,257,836,285 | 1,676,445,118 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |    3.4805 |  4,848,186,547 | 1,392,956,916 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    0.5109 |    527,542,991 | 1,032,575,829 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    0.4584 |    516,673,965 | 1,127,124,705 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    0.7245 |  1,001,627,770 | 1,382,508,999 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0341 |      3,398,455 |    99,661,437 | G8 B7 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total time:** 8.7780s
- **Total nodes:** 11,644,906,487
- **NPS:** 1,326,601,331

**Settings:** Precision Boost Overdrive: `Disabled`, Core Performance Boost: `Disabled`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0120 |      9,663,513 |   805,292,750 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.0379 |     18,942,083 |   499,791,108 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.0370 |     17,121,920 |   462,754,595 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.0772 |     46,614,063 |   603,809,106 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.0316 |     10,490,174 |   331,967,532 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    0.2016 |    203,474,459 | 1,009,297,912 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.0684 |     38,346,550 |   560,622,076 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.0341 |     14,649,405 |   429,601,320 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    0.1142 |     64,897,761 |   568,281,620 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    0.2299 |    171,424,451 |   745,647,895 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    0.4736 |    425,221,518 |   897,849,489 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    0.1579 |    118,963,560 |   753,410,766 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    0.2051 |    154,815,391 |   754,828,820 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |    1.0037 |  1,217,569,304 | 1,213,080,905 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |    1.5778 |  2,232,016,382 | 1,414,638,346 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |    4.0755 |  4,797,769,307 | 1,177,222,257 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    0.6322 |    528,484,409 |   835,944,968 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    0.5385 |    513,207,375 |   953,031,337 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    0.8602 |    996,907,132 | 1,158,924,822 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.0401 |      3,418,538 |    85,250,324 | G8 B7 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total time:** 10.4085s
- **Total nodes:** 11,583,997,295
- **NPS:** 1,112,936,282

#### Single-threaded

**Settings:** Precision Boost Overdrive: `Disabled`, Core Performance Boost: `Disabled`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.1302 |      8,678,803 |    66,657,473 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.2154 |     12,834,974 |    59,586,695 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.2503 |     13,769,224 |    55,010,883 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.8724 |     41,677,014 |    47,772,827 | G3 H6 H5 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.1889 |      7,978,719 |    42,237,792 | B8 G5 D2 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    3.0337 |    161,202,742 |    53,137,338 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.5223 |     27,462,488 |    52,579,912 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.1890 |     10,083,433 |    53,351,497 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    1.4099 |     54,572,570 |    38,706,696 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    2.6504 |    120,866,090 |    45,602,962 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    9.0208 |    398,217,063 |    44,144,318 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    2.0124 |     98,283,609 |    48,839,003 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    2.1006 |    112,239,386 |    53,432,060 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |   18.9018 |  1,084,453,095 |    57,373,007 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |   32.0157 |  1,996,637,662 |    62,364,329 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |   86.6066 |  4,445,832,913 |    51,333,650 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    9.9146 |    475,255,827 |    47,934,947 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    8.9202 |    444,474,995 |    49,827,918 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |   11.7907 |    636,295,224 |    53,965,856 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.5174 |      3,993,394 |     7,718,195 | G8 B7 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total time:** 191.2633s
- **Total nodes:** 10,154,809,225
- **NPS:** 53,093,349

**Settings:** Precision Boost Overdrive: `Auto`, Core Performance Boost: `Auto`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.0998 |      8,678,803 |    86,961,954 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.1623 |     12,834,974 |    79,081,787 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.1905 |     13,769,224 |    72,279,391 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.6592 |     41,677,014 |    63,223,626 | G3 H6 H5 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.1441 |      7,978,719 |    55,369,320 | B8 G5 D2 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    2.3089 |    161,202,742 |    69,817,983 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.3985 |     27,462,488 |    68,914,650 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.1451 |     10,083,433 |    69,492,991 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    1.0797 |     54,572,570 |    50,544,197 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    2.0176 |    120,866,090 |    59,905,873 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    6.9544 |    398,217,063 |    57,261,167 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    1.5455 |     98,283,609 |    63,593,406 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    1.5939 |    112,239,386 |    70,418,085 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |   14.4370 |  1,084,453,095 |    75,116,236 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |   24.4077 |  1,996,637,662 |    81,803,597 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |   66.4917 |  4,445,832,913 |    66,862,976 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    7.7866 |    475,255,827 |    61,035,089 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    6.8927 |    444,474,995 |    64,484,889 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    9.2052 |    636,295,224 |    69,123,455 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.4044 |      3,993,394 |     9,874,862 | G8 B7 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total time:** 146.9248s
- **Total nodes:** 10,154,809,225
- **NPS:** 69,115,692

### FFO #60–79

#### Multi-threaded

**Settings:** Precision Boost Overdrive: `Auto`, Core Performance Boost: `Auto`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  60 |   24   |    0.0590 |     36,637,966 |   620,982,475 | C2 B4 A4 |   20.0 |  20 : C2                         |
|  61 |   25   |    0.0958 |     85,583,951 |   893,360,658 | G1 H6 H5 |  -14.0 | -14 : H3,G1                      |
|  62 |   27   |    0.5294 |    547,805,735 | 1,034,767,161 | E8 H5 H2 |   28.0 |  28 : E8                         |
|  63 |   27   |    0.3946 |    559,386,667 | 1,417,604,326 | F2 F1 C8 |   -2.0 |  -2 : F2                         |
|  64 |   27   |    1.2828 |  1,736,556,217 | 1,353,723,275 | B4 H6 H7 |   20.0 |  20 : B4                         |
|  65 |   28   |    4.0000 |  5,544,056,165 | 1,386,014,041 | G1 G7 C8 |   10.0 |  10 : G1                         |
|  66 |   28   |    1.6761 |  1,831,003,008 | 1,092,418,715 | H3 E1 G4 |   30.0 |  30 : H3                         |
|  67 |   28   |    2.4160 |  3,026,977,364 | 1,252,887,982 | H3 F8 A6 |   22.0 |  22 : H3                         |
|  68 |   30   |    8.1246 |  6,426,592,275 |   791,004,145 | E8 D8 A5 |   28.0 |  28 : E8                         |
|  69 |   30   |    1.7652 |  2,414,688,152 | 1,367,940,263 | H3 H5 A2 |    0.0 |   0 : H3                         |
|  70 |   30   |    0.5561 |    508,107,446 |   913,697,979 | E3 F3 E8 |  -24.0 | -24 : E3                         |
|  71 |   31   |    1.9658 |  1,918,186,729 |   975,779,189 | D2 A5 E2 |   20.0 |  20 : D2                         |
|  72 |   31   |   20.3974 | 17,421,015,819 |   854,080,217 | E1 F1 H5 |   24.0 |  24 : E1                         |
|  73 |   31   |    2.9857 |  3,586,626,661 | 1,201,268,266 | G4 H6 E8 |   -4.0 |  -4 : G4                         |
|  74 |   31   |   16.3834 | 12,373,273,389 |   755,232,332 | F1 D1 C1 |  -30.0 | -30 : F1                         |
|  75 |   32   |   25.7190 | 35,714,327,071 | 1,388,635,914 | D2 D1 H5 |   14.0 |  14 : D2                         |
|  76 |   32   |  104.1511 | 58,468,508,383 |   561,381,573 | A3 A2 B3 |   32.0 |  32 : A3                         |
|  77 |   34   |   62.2756 | 38,265,387,341 |   614,452,327 | B7 A5 A7 |   34.0 |  34 : B7                         |
|  78 |   34   |   19.6690 | 18,019,985,928 |   916,161,774 | F1 G1 A2 |    8.0 |   8 : F1                         |
|  79 |   36   |    0.0298 |      5,375,053 |   180,370,906 | D7 D8 H8 |   64.0 |  64 : D7                         |

- **Total time:** 274.4764s
- **Total nodes:** 208,490,081,320
- **NPS:** 759,592,013

**Settings:** Precision Boost Overdrive: `Disabled`, Core Performance Boost: `Disabled`

|  #  | Depth  |  Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|----------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  60 |   24   |    0.0730 |     37,363,321 |   511,826,315 | C2 B4 A4 |   20.0 |  20 : C2                         |
|  61 |   25   |    0.1156 |     84,561,892 |   731,504,256 | H3 F1 B7 |  -14.0 | -14 : H3,G1                      |
|  62 |   27   |    0.6315 |    540,958,143 |   856,624,138 | E8 H5 H2 |   28.0 |  28 : E8                         |
|  63 |   27   |    0.4601 |    548,364,182 | 1,191,836,953 | F2 F1 C8 |   -2.0 |  -2 : F2                         |
|  64 |   27   |    1.5625 |  1,774,314,452 | 1,135,561,249 | B4 H6 H7 |   20.0 |  20 : B4                         |
|  65 |   28   |    4.6170 |  5,576,338,604 | 1,207,783,973 | G1 G7 C8 |   10.0 |  10 : G1                         |
|  66 |   28   |    1.9617 |  1,820,385,856 |   927,963,428 | H3 E1 G4 |   30.0 |  30 : H3                         |
|  67 |   28   |    2.8029 |  3,057,286,673 | 1,090,758,383 | H3 F8 A6 |   22.0 |  22 : H3                         |
|  68 |   30   |    9.8535 |  6,426,156,581 |   652,169,948 | E8 D8 A5 |   28.0 |  28 : E8                         |
|  69 |   30   |    2.0988 |  2,404,600,301 | 1,145,702,449 | H3 H5 A2 |    0.0 |   0 : H3                         |
|  70 |   30   |    0.6787 |    517,098,955 |   761,896,206 | E3 F3 E8 |  -24.0 | -24 : E3                         |
|  71 |   31   |    2.3803 |  1,928,577,633 |   810,224,607 | D2 A5 E2 |   20.0 |  20 : D2                         |
|  72 |   31   |   23.9479 | 17,121,761,752 |   714,958,796 | E1 F1 H5 |   24.0 |  24 : E1                         |
|  73 |   31   |    3.4587 |  3,448,202,615 |   996,964,933 | G4 H6 E8 |   -4.0 |  -4 : G4                         |
|  74 |   31   |   20.3842 | 12,511,804,680 |   613,799,152 | F1 D1 C1 |  -30.0 | -30 : F1                         |
|  75 |   32   |   30.5378 | 35,460,006,964 | 1,161,184,072 | D2 D1 H5 |   14.0 |  14 : D2                         |
|  76 |   32   |  130.6870 | 57,917,515,023 |   443,177,325 | A3 A2 B3 |   32.0 |  32 : A3                         |
|  77 |   34   |   75.1494 | 37,853,402,058 |   503,708,640 | B7 A5 A7 |   34.0 |  34 : B7                         |
|  78 |   34   |   24.1341 | 17,853,783,552 |   739,774,160 | F1 G1 A2 |    8.0 |   8 : F1                         |
|  79 |   36   |    0.0355 |      5,210,034 |   146,761,521 | D7 D8 H8 |   64.0 |  64 : D7                         |

- **Total time:** 335.5702s
- **Total nodes:** 206,887,693,271
- **NPS:** 616,525,822
